# PhanMemHoTroNguoiCamDiec

./: .gitattributes  .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tondz/camdiec/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/tondz/nguoicam/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/tondz/phanmemhotrocamdiec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: tonghop8s.param
app/src/main/java/com/tondz/camdiec/: Common.java  MainActivity.java  NguoiMuSDK.java
app/src/main/java/com/tondz/nguoicam/: Common.java  MainActivity.java  NguoiMuSDK.java  StartActivity.java
app/src/main/java/com/tondz/phanmemhotrocamdiec/: Common.java  MainActivity.java  NguoiMuSDK.java  StartActivity.java
app/src/main/jni/: CMakeLists.txt  deaf_recognition.cpp  deaf_recognition.h  emotion_recognition.cpp  emotion_recognition.h  nguoimusdk.cpp  scrfd.cpp  scrfd.h  yolo.cpp  yolo.h
app/src/main/res/drawable/: baseline_flip_camera_android_24.xml
app/src/main/res/layout/: activity_main.xml  activity_start.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tondz/camdiec/: ExampleUnitTest.java
app/src/test/java/com/tondz/nguoicam/: ExampleUnitTest.java
app/src/test/java/com/tondz/phanmemhotrocamdiec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
